--- a/Project_2/assets/styles/_section.scss
+++ b/Project_2/assets/styles/_section.scss
@@ -2,8 +2,10 @@
 
 .what_we_do {
     background-color: $primary-color;
-    width: 100%;
+    width: 90%;
     height: 1367px;
+    max-width: 1170px;
+    margin: 0 auto;
 
 }
 
@@ -34,6 +36,13 @@
 
 .projects {
     margin-top: 89px;
+
+    img {
+        position: relative;
+        z-index: 10;
+        vertical-align: top;
+        box-shadow: -260px -57px $tertiary-color;
+    }
 }
 
 .project_1,
@@ -41,14 +50,134 @@
     width: 100%;
     max-width: 1385px;
     height: 527px;
-
 }
 
 .project_1 {
     margin-right: 215px;
     margin-bottom: 140px;
+    display: flex;
+    justify-content: space-between;
+    gap: 70px;
+
+    .project_image {
+        width: 100%;
+        height: 100%;
+
+
+    }
+}
+
+.project_details {
+    padding-top: 85px;
+    padding-bottom: 25px;
+    width: 100%;
+
+    h3 {
+        font-size: $font_size_4;
+        color: $secondary-color;
+        font-weight: 400;
+        text-transform: uppercase;
+    }
+
+    h2 {
+        font-size: $font_size_5;
+        color: $secondary-color;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    p {
+        font-size: $font_size_3;
+        color: $secondary-color;
+        line-height: 30px;
+        font-weight: 400;
+        font-family: "Source Sans 3",
+            serif;
+        margin-top: 19px;
+        letter-spacing: 1px; //This needs to be added or it will not look as the design 
+    }
+
+    button {
+        margin-top: 41px;
+        width: 100%;
+        max-width: 190px;
+        height: 50px;
+        font-size: $font_size_1;
+        text-transform: uppercase;
+        border: 1px solid $secondary-color;
+        background-color: $primary-color;
+        cursor: pointer;
+        padding: 16px 41px;
+        text-align: center;
+        transition: all 0.3s ease-in-out;
+        position: relative;
+        overflow: hidden;
+        outline: none;
+
+        &:hover {
+            background: $tertiary-color;
+            border-color: $tertiary-color;
+            color: $secondary-color;
+            box-shadow: 0px 0px 15px rgba(85, 183, 255, 0.6);
+        }
+
+        &:active {
+            transform: scale(0.95);
+            background: $hover_color;
+            border-color: $hover_color;
+            box-shadow: 0px 0px 15px rgba(208, 0, 0, 0.6);
+        }
+
+        &::before {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.3) 10%, transparent 80%);
+            transition: all 0.5s ease-in-out;
+            transform: translate(-50%, -50%) scale(0);
+        }
+
+        &:hover::before {
+            transform: translate(-50%, -50%) scale(1);
+        }
+    }
+
+    .coordinates {
+        margin-top: 60px;
+
+        i {
+            font-size: $font_size_2;
+            color: $secondary-color;
+            margin-right: 10px;
+            transition: color 0.3s ease-in-out,
+                transform 0.3s ease-in-out;
+
+            &:hover {
+                color: $hover_color;
+                transform: scale(1.2);
+            }
+        }
+
+        a {
+            color: $secondary-color;
+            font-family: "Source Sans 3",
+                serif;
+            font-size: $font_size_2;
+            font-style: italic;
+        }
+    }
+
 }
 
 .project_2 {
-    margin-left: 215px;
+    display: flex;
+    justify-content: space-between;
+    gap: 64px;
+
+    img {
+        box-shadow: 260px -57px $commerce_background;
+    }
 }
