--- a/Project_2/assets/styles/_vars.scss
+++ b/Project_2/assets/styles/_vars.scss
@@ -1,5 +1,5 @@
 $primary-color:#fff;
-$secondary-color:#2C4058;
+$secondary-color:#2c4058;
 $tertiary-color:#55B7FF;
 $commerce_background:#7E5AFF;
 $hover_color:#d00000;
