--- a/Project_2/assets/styles/main.css
+++ b/Project_2/assets/styles/main.css
@@ -26,7 +26,6 @@ ul {
 
 header {
   width: 100%;
-  height: 100vh;
   background-image: url("../images/first_section_background.jpg");
   background-size: cover;
   background-position: center;
@@ -37,12 +36,29 @@ header {
 
 .header_container {
   width: 100%;
-  max-width: 1170px;
   min-height: 54px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.title_bar {
+  width: 100%;
   margin: 0 auto;
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  padding-top: 53px;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  transition: all 0.3s ease-in-out;
+}
+.title_bar.scrolled {
+  background: linear-gradient(360deg, #55B7FF 0%, #2c4058 50%, #7E5AFF 100%);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  padding-top: 0;
 }
 
 .header_logo {
@@ -50,16 +66,23 @@ header {
   width: 100%;
   margin-right: 144px;
 }
+.header_logo img {
+  transition: transform 0.3s ease-in-out;
+}
+.header_logo:hover img {
+  transform: scale(1.1);
+}
 
 .header_body {
   width: 100%;
-  max-width: 917px;
   margin: 223px 127px 0;
   position: relative;
+  top: 5%;
+  right: 9%;
 }
 .header_body .slider_heading {
   text-align: center;
-  display: flex !important;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -67,7 +90,6 @@ header {
 .header_body .slider_heading h2 {
   font-weight: bold;
   font-size: 80px;
-  letter-spacing: 10%;
   margin-bottom: 20px;
   min-height: 98px;
 }
@@ -109,6 +131,9 @@ header {
   background-color: #fff;
 }
 
+.pointer_down {
+  margin-bottom: 50px;
+}
 .pointer_down a {
   text-decoration: none;
   border-radius: 50%;
@@ -269,7 +294,7 @@ nav li:hover a::before {
 .what_we_do_title hr {
   border: 0;
   height: 1px;
-  background-color: #2C4058;
+  background-color: #2c4058;
   width: 100px;
   display: block;
   margin: 99px auto 0;
@@ -278,7 +303,7 @@ nav li:hover a::before {
   font-size: 44px;
   font-weight: bold;
   text-align: center;
-  color: #2C4058;
+  color: #2c4058;
   margin-top: 30px;
   text-transform: uppercase;
 }
@@ -319,19 +344,19 @@ nav li:hover a::before {
 }
 .project_details h3 {
   font-size: 22px;
-  color: #2C4058;
+  color: #2c4058;
   font-weight: 400;
   text-transform: uppercase;
 }
 .project_details h2 {
   font-size: 44px;
-  color: #2C4058;
+  color: #2c4058;
   font-weight: bold;
   text-transform: uppercase;
 }
 .project_details p {
   font-size: 18px;
-  color: #2C4058;
+  color: #2c4058;
   line-height: 30px;
   font-weight: 400;
   font-family: "Source Sans 3", serif;
@@ -345,7 +370,7 @@ nav li:hover a::before {
   height: 50px;
   font-size: 14px;
   text-transform: uppercase;
-  border: 1px solid #2C4058;
+  border: 1px solid #2c4058;
   background-color: #fff;
   cursor: pointer;
   padding: 16px 41px;
@@ -358,7 +383,7 @@ nav li:hover a::before {
 .project_details button:hover {
   background: #55B7FF;
   border-color: #55B7FF;
-  color: #2C4058;
+  color: #2c4058;
   box-shadow: 0px 0px 15px rgba(85, 183, 255, 0.6);
 }
 .project_details button:active {
@@ -386,7 +411,7 @@ nav li:hover a::before {
 }
 .project_details .coordinates i {
   font-size: 15px;
-  color: #2C4058;
+  color: #2c4058;
   margin-right: 10px;
   transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
@@ -395,7 +420,7 @@ nav li:hover a::before {
   transform: scale(1.2);
 }
 .project_details .coordinates a {
-  color: #2C4058;
+  color: #2c4058;
   font-family: "Source Sans 3", serif;
   font-size: 15px;
   font-style: italic;
@@ -408,4 +433,8 @@ nav li:hover a::before {
 }
 .project_2 img {
   box-shadow: 260px -57px #7E5AFF;
+}
+
+.news_section {
+  background: 230deg, #24ccfa 0%, #3c7fd4 100%;
 }
