--- a/Project_2/assets/styles/_header.css
+++ b/Project_2/assets/styles/_header.css
@@ -1,6 +1,5 @@
 header {
   width: 100%;
-  height: 100vh;
   background-image: url("../images/first_section_background.jpg");
   background-size: cover;
   background-position: center;
@@ -11,12 +10,29 @@ header {
 
 .header_container {
   width: 100%;
-  max-width: 1170px;
   min-height: 54px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.title_bar {
+  width: 100%;
   margin: 0 auto;
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  padding-top: 53px;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  transition: all 0.3s ease-in-out;
+}
+.title_bar.scrolled {
+  background: linear-gradient(360deg, #55B7FF 0%, #2c4058 50%, #7E5AFF 100%);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  padding-top: 0;
 }
 
 .header_logo {
@@ -24,16 +40,23 @@ header {
   width: 100%;
   margin-right: 144px;
 }
+.header_logo img {
+  transition: transform 0.3s ease-in-out;
+}
+.header_logo:hover img {
+  transform: scale(1.1);
+}
 
 .header_body {
   width: 100%;
-  max-width: 917px;
   margin: 223px 127px 0;
   position: relative;
+  top: 5%;
+  right: 9%;
 }
 .header_body .slider_heading {
   text-align: center;
-  display: flex !important;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -41,7 +64,6 @@ header {
 .header_body .slider_heading h2 {
   font-weight: bold;
   font-size: 80px;
-  letter-spacing: 10%;
   margin-bottom: 20px;
   min-height: 98px;
 }
@@ -83,6 +105,9 @@ header {
   background-color: #fff;
 }
 
+.pointer_down {
+  margin-bottom: 50px;
+}
 .pointer_down a {
   text-decoration: none;
   border-radius: 50%;
