margin issues news section

--- a/Project_2/assets/styles/_components.scss
+++ b/Project_2/assets/styles/_components.scss
@@ -1,1 +1,9 @@
 @import '../styles/vars';
+
+hr {
+    border: 0;
+    height: 1px;
+    width: 100px;
+    display: block;
+    margin: 99px auto 0;
+}
