--- a/Project_2/assets/styles/_header.scss
+++ b/Project_2/assets/styles/_header.scss
@@ -7,8 +7,9 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    margin: 0 auto;
+    // margin: 0 auto;
     padding: 53px 215px 0;
+    margin-bottom: 100px;
 }
 
 .header_container {
@@ -128,6 +129,9 @@ header {
 
 .pointer_down {
     margin-bottom: 50px;
+    position: relative;
+    top: -40px;
+    left: 0px;
 
     a {
         text-decoration: none;
