--- a/Project_2/assets/styles/main.css
+++ b/Project_2/assets/styles/main.css
@@ -30,8 +30,8 @@ header {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  margin: 0 auto;
   padding: 53px 215px 0;
+  margin-bottom: 100px;
 }
 
 .header_container {
@@ -133,6 +133,9 @@ header {
 
 .pointer_down {
   margin-bottom: 50px;
+  position: relative;
+  top: -40px;
+  left: 0px;
 }
 .pointer_down a {
   text-decoration: none;
@@ -277,10 +280,13 @@ nav li:hover a::before {
     transform: scale(1.15);
   }
 }
+#projects {
+  margin-bottom: 100px;
+}
+
 .what_we_do {
   background-color: #fff;
   width: 90%;
-  height: 1367px;
   max-width: 1170px;
   margin: 0 auto;
 }
@@ -292,12 +298,7 @@ nav li:hover a::before {
   margin: 0 auto;
 }
 .what_we_do_title hr {
-  border: 0;
-  height: 1px;
   background-color: #2c4058;
-  width: 100px;
-  display: block;
-  margin: 99px auto 0;
 }
 .what_we_do_title h2 {
   font-size: 44px;
@@ -436,5 +437,39 @@ nav li:hover a::before {
 }
 
 .news_section {
-  background: 230deg, #24ccfa 0%, #3c7fd4 100%;
+  min-height: 1035px;
+  background: url("../images/news_background.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.news_section_content {
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+}
+.news_section_content .news_title {
+  width: 100%;
+  max-width: 327px;
+  height: 84px;
+  margin: 0 auto;
+}
+.news_section_content .news_title hr {
+  color: #fff;
+}
+.news_section_content .news_title h2 {
+  font-size: 44px;
+  font-weight: bold;
+  text-align: center;
+}
+
+hr {
+  border: 0;
+  height: 1px;
+  width: 100px;
+  display: block;
+  margin: 99px auto 0;
 }
