changed the contents approach with js

--- a/Project_2/assets/styles/_nav.scss
+++ b/Project_2/assets/styles/_nav.scss
@@ -107,6 +107,9 @@ nav {
 
 .header_icons a:nth-child(1):hover i {
     color: #1877F2;
+    position: absolute;
+    top: 32%;
+    left: 35%;
 }
 
 .header_icons a:nth-child(2):hover i {
