--- a/Project_2/assets/styles/_header.css
+++ b/Project_2/assets/styles/_header.css
@@ -74,34 +74,34 @@ header {
   min-height: 22px;
   margin-bottom: 240px;
 }
-
-.slick-dots {
-  position: fixed;
-  top: 55%;
-  right: 25px;
+.header_body .slick-dots {
+  position: absolute;
+  top: 25%;
+  right: -130px;
   transform: translateY(-50%);
-  display: flex !important;
+  display: flex;
   flex-direction: column;
   padding: 0;
   margin: 0 15px 0 0;
+  width: 0;
+  bottom: 0;
 }
-.slick-dots li {
+.header_body .slick-dots li {
   list-style: none;
   margin: 10px 0;
 }
-.slick-dots li button {
+.header_body .slick-dots li button {
   border-radius: 50%;
   width: 10px;
   height: 10px;
-  border: 2px solid #fff;
+  border: 1px solid #fff;
   background-color: transparent;
   text-indent: -9999px;
   outline: none;
   transition: background-color 0.3s ease;
 }
-
-.slick-dots button:hover,
-.slick-dots .slick-active button {
+.header_body .slick-dots button:hover,
+.header_body .slick-dots .slick-active button {
   background-color: #fff;
 }
 
@@ -136,7 +136,7 @@ header {
 }
 .pointer_down a i {
   position: absolute;
-  top: 32%;
-  left: 32%;
+  top: 35%;
+  left: 30%;
   font-size: 15px;
 }
