--- a/Project_2/assets/styles/_section.css
+++ b/Project_2/assets/styles/_section.css
@@ -1,7 +1,3 @@
-#projects {
-  margin-bottom: 100px;
-}
-
 .what_we_do {
   background-color: #fff;
   width: 90%;
@@ -17,6 +13,8 @@
 }
 .what_we_do_title hr {
   background-color: #2c4058;
+  width: 100px;
+  margin: 0 auto;
 }
 .what_we_do_title h2 {
   font-size: 44px;
@@ -154,6 +152,10 @@
   box-shadow: 260px -57px #7E5AFF;
 }
 
+#news {
+  margin-top: 40px;
+}
+
 .news_section {
   min-height: 1035px;
   background: url("../images/news_background.jpg");
@@ -168,18 +170,102 @@
   width: 100%;
   max-width: 1170px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .news_section_content .news_title {
   width: 100%;
   max-width: 327px;
   height: 84px;
-  margin: 0 auto;
+  margin: 135px auto 0 auto;
+  text-align: center;
 }
 .news_section_content .news_title hr {
-  color: #fff;
+  border: none;
+  height: 1px;
+  background-color: #fff;
+  width: 100px;
+  margin: 0 auto;
 }
 .news_section_content .news_title h2 {
   font-size: 44px;
   font-weight: bold;
   text-align: center;
+  margin-top: 30px;
+  text-transform: uppercase;
+}
+
+.article .slick-dots {
+  display: block !important;
+  position: relative;
+  bottom: 10px;
+}
+
+.carousel {
+  margin: 89px auto 0;
+  width: 90%;
+  max-width: 1170px;
+}
+
+.article_details {
+  width: 100%;
+  max-width: 370px;
+  height: 514px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  margin-right: 30px;
+}
+.article_details img {
+  width: 100%;
+  height: 240px;
+}
+.article_details h2 {
+  margin: 30px 20px 15px;
+  color: #2c4058;
+  font-weight: bold;
+  font-size: 22px;
+}
+.article_details p {
+  margin: 0 20px 39px;
+  color: #2c4058;
+  font-size: 18px;
+  font-weight: 400;
+  font-family: "Source Sans 3", serif;
+  letter-spacing: 0.5px;
+}
+.article_details p:nth-child(3) {
+  letter-spacing: 0.6px;
+}
+.article_details .authors {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 164px 30px 20px;
+}
+.article_details .authors img {
+  width: 100%;
+  max-width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+.article_details .authors .author_details {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+}
+.article_details .authors .author_details h3 {
+  color: #2c4058;
+  font-weight: 400;
+  font-size: 18px;
+  margin-bottom: 6px;
+}
+.article_details .authors .author_details p {
+  color: #55B7FF;
+  font-weight: 400;
+  font-size: 14px;
+  margin: 0;
 }
