--- a/Project_2/assets/styles/main.css
+++ b/Project_2/assets/styles/main.css
@@ -100,34 +100,34 @@ header {
   min-height: 22px;
   margin-bottom: 240px;
 }
-
-.slick-dots {
-  position: fixed;
-  top: 55%;
-  right: 25px;
+.header_body .slick-dots {
+  position: absolute;
+  top: 25%;
+  right: -130px;
   transform: translateY(-50%);
-  display: flex !important;
+  display: flex;
   flex-direction: column;
   padding: 0;
   margin: 0 15px 0 0;
+  width: 0;
+  bottom: 0;
 }
-.slick-dots li {
+.header_body .slick-dots li {
   list-style: none;
   margin: 10px 0;
 }
-.slick-dots li button {
+.header_body .slick-dots li button {
   border-radius: 50%;
   width: 10px;
   height: 10px;
-  border: 2px solid #fff;
+  border: 1px solid #fff;
   background-color: transparent;
   text-indent: -9999px;
   outline: none;
   transition: background-color 0.3s ease;
 }
-
-.slick-dots button:hover,
-.slick-dots .slick-active button {
+.header_body .slick-dots button:hover,
+.header_body .slick-dots .slick-active button {
   background-color: #fff;
 }
 
@@ -162,8 +162,8 @@ header {
 }
 .pointer_down a i {
   position: absolute;
-  top: 32%;
-  left: 32%;
+  top: 35%;
+  left: 30%;
   font-size: 15px;
 }
 
@@ -259,6 +259,9 @@ nav li:hover a::before {
 
 .header_icons a:nth-child(1):hover i {
   color: #1877F2;
+  position: absolute;
+  top: 32%;
+  left: 35%;
 }
 
 .header_icons a:nth-child(2):hover i {
@@ -280,10 +283,6 @@ nav li:hover a::before {
     transform: scale(1.15);
   }
 }
-#projects {
-  margin-bottom: 100px;
-}
-
 .what_we_do {
   background-color: #fff;
   width: 90%;
@@ -299,6 +298,8 @@ nav li:hover a::before {
 }
 .what_we_do_title hr {
   background-color: #2c4058;
+  width: 100px;
+  margin: 0 auto;
 }
 .what_we_do_title h2 {
   font-size: 44px;
@@ -436,6 +437,10 @@ nav li:hover a::before {
   box-shadow: 260px -57px #7E5AFF;
 }
 
+#news {
+  margin-top: 40px;
+}
+
 .news_section {
   min-height: 1035px;
   background: url("../images/news_background.jpg");
@@ -450,26 +455,102 @@ nav li:hover a::before {
   width: 100%;
   max-width: 1170px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .news_section_content .news_title {
   width: 100%;
   max-width: 327px;
   height: 84px;
-  margin: 0 auto;
+  margin: 135px auto 0 auto;
+  text-align: center;
 }
 .news_section_content .news_title hr {
-  color: #fff;
+  border: none;
+  height: 1px;
+  background-color: #fff;
+  width: 100px;
+  margin: 0 auto;
 }
 .news_section_content .news_title h2 {
   font-size: 44px;
   font-weight: bold;
   text-align: center;
+  margin-top: 30px;
+  text-transform: uppercase;
 }
 
-hr {
-  border: 0;
-  height: 1px;
-  width: 100px;
-  display: block;
-  margin: 99px auto 0;
+.article .slick-dots {
+  display: block !important;
+  position: relative;
+  bottom: 10px;
+}
+
+.carousel {
+  margin: 89px auto 0;
+  width: 90%;
+  max-width: 1170px;
+}
+
+.article_details {
+  width: 100%;
+  max-width: 370px;
+  height: 514px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  margin-right: 30px;
+}
+.article_details img {
+  width: 100%;
+  height: 240px;
+}
+.article_details h2 {
+  margin: 30px 20px 15px;
+  color: #2c4058;
+  font-weight: bold;
+  font-size: 22px;
+}
+.article_details p {
+  margin: 0 20px 39px;
+  color: #2c4058;
+  font-size: 18px;
+  font-weight: 400;
+  font-family: "Source Sans 3", serif;
+  letter-spacing: 0.5px;
+}
+.article_details p:nth-child(3) {
+  letter-spacing: 0.6px;
+}
+.article_details .authors {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 164px 30px 20px;
+}
+.article_details .authors img {
+  width: 100%;
+  max-width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+.article_details .authors .author_details {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+}
+.article_details .authors .author_details h3 {
+  color: #2c4058;
+  font-weight: 400;
+  font-size: 18px;
+  margin-bottom: 6px;
+}
+.article_details .authors .author_details p {
+  color: #55B7FF;
+  font-weight: 400;
+  font-size: 14px;
+  margin: 0;
 }
