--- a/Project_2/assets/styles/_section.css
+++ b/Project_2/assets/styles/_section.css
@@ -196,10 +196,41 @@
   text-transform: uppercase;
 }
 
+.article .slick-dots li button:before {
+  content: "";
+  color: transparent;
+  border: 1px solid #fff;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  opacity: 1;
+}
+.article .slick-dots li.slick-active button:before {
+  background-color: #fff;
+  opacity: 1;
+}
 .article .slick-dots {
-  display: block !important;
-  position: relative;
-  bottom: 10px;
+  position: static;
+  margin-top: 60px;
+}
+.article .slick-prev:before,
+.article .slick-next:before {
+  content: none;
+  display: none;
+}
+.article .slick-arrow {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  background-color: transparent;
+}
+.article i {
+  font-size: 14px;
+  color: #fff;
 }
 
 .carousel {
@@ -243,8 +274,8 @@
 .article_details .authors {
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin: 0 164px 30px 20px;
+  margin: 0 115px 30px 20px;
+  white-space: nowrap;
 }
 .article_details .authors img {
   width: 100%;
