corrections from the feedback

--- a/Project_2/assets/styles/_nav.scss
+++ b/Project_2/assets/styles/_nav.scss
@@ -98,6 +98,7 @@ nav {
         font-size: 16px;
         font-weight: 400;
         position: absolute;
+        text-align: center;
         top: 33%;
         left: 30%;
         transition: transform 0.3s ease-in-out,
@@ -109,7 +110,7 @@ nav {
     color: #1877F2;
     position: absolute;
     top: 32%;
-    left: 35%;
+    left: 28%;
 }
 
 .header_icons a:nth-child(2):hover i {
