--- a/Project_2/assets/styles/_section.scss
+++ b/Project_2/assets/styles/_section.scss
@@ -10,13 +10,14 @@
 .what_we_do_title {
     width: 100%;
     max-width: 324px;
-    height: 84px;
     margin: 0 auto;
 
-    hr {
-        background-color: $secondary-color;
+    &:before {
+        content: "";
+        display: block;
         width: 100px;
         margin: 0 auto;
+        border: 1px solid $secondary-color;
     }
 
     h2 {
@@ -175,11 +176,11 @@
 }
 
 #news {
-    margin-top: 40px;
+    padding-top: 40px;
 }
 
 .news_section {
-    min-height: 1035px;
+    // min-height: 1035px;
     background: url('../images/news_background.jpg');
     background-repeat: no-repeat;
     background-position: center;
@@ -199,17 +200,19 @@
     .news_title {
         width: 100%;
         max-width: 327px;
-        height: 84px;
-        margin: 135px auto 0 auto; // This is the desired margin 
+        // height: 84px;
+        // margin: 135px auto 0 auto; // This is the desired margin 
+        padding-top: 135px;
         text-align: center;
 
-        hr {
-            border: none;
-            height: 1px;
-            background-color: $primary-color;
+        &:before {
+            content: "";
+            display: block;
             width: 100px;
             margin: 0 auto;
+            border: 1px solid $primary-color;
         }
+
 
         h2 {
             font-size: $font_size_5;
@@ -259,7 +262,13 @@
         background-color: transparent;
     }
 
-    .slick-next {}
+    .slick-next {
+        right: -85px;
+    }
+
+    .slick-prev {
+        left: -100px;
+    }
 
     i {
         font-size: $font_size_1;
@@ -282,7 +291,7 @@
     align-items: center;
     justify-content: center;
     background-color: $primary-color;
-    margin-right: 30px;
+    margin: 0 20px 0 15px;
 
     img {
         width: 100%;
