--- a/Project_2/assets/styles/_header.css
+++ b/Project_2/assets/styles/_header.css
@@ -4,7 +4,6 @@ header {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 53px 215px 0;
   margin-bottom: 100px;
 }
 
@@ -49,10 +48,7 @@ header {
 
 .header_body {
   width: 100%;
-  margin: 223px 127px 0;
-  position: relative;
-  top: 5%;
-  right: 9%;
+  margin-top: 223px;
 }
 .header_body .slider_heading {
   text-align: center;
@@ -77,7 +73,7 @@ header {
 .header_body .slick-dots {
   position: absolute;
   top: 25%;
-  right: -130px;
+  right: 50px;
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
