--- a/Project_2/assets/styles/_header.scss
+++ b/Project_2/assets/styles/_header.scss
@@ -2,13 +2,12 @@
 
 header {
     width: 100%;
-    // height: 100vh;
     background-image: url('../images/first_section_background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     // margin: 0 auto;
-    padding: 53px 215px 0;
+    // padding: 53px 215px 0;
     margin-bottom: 100px;
 }
 
@@ -57,11 +56,7 @@ header {
 
 .header_body {
     width: 100%;
-    // max-width: 917px;
-    margin: 223px 127px 0;
-    position: relative;
-    top: 5%;
-    right: 9%;
+    margin-top: 223px;
 
     .slider_heading {
         text-align: center;
@@ -89,7 +84,7 @@ header {
     .slick-dots {
         position: absolute;
         top: 25%;
-        right: -130px;
+        right: 50px;
         transform: translateY(-50%);
         display: flex;
         flex-direction: column;
