--- a/Project_2/assets/styles/_section.css
+++ b/Project_2/assets/styles/_section.css
@@ -8,13 +8,14 @@
 .what_we_do_title {
   width: 100%;
   max-width: 324px;
-  height: 84px;
   margin: 0 auto;
 }
-.what_we_do_title hr {
-  background-color: #2c4058;
+.what_we_do_title:before {
+  content: "";
+  display: block;
   width: 100px;
   margin: 0 auto;
+  border: 1px solid #2c4058;
 }
 .what_we_do_title h2 {
   font-size: 44px;
@@ -153,11 +154,10 @@
 }
 
 #news {
-  margin-top: 40px;
+  padding-top: 40px;
 }
 
 .news_section {
-  min-height: 1035px;
   background: url("../images/news_background.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -177,16 +177,15 @@
 .news_section_content .news_title {
   width: 100%;
   max-width: 327px;
-  height: 84px;
-  margin: 135px auto 0 auto;
+  padding-top: 135px;
   text-align: center;
 }
-.news_section_content .news_title hr {
-  border: none;
-  height: 1px;
-  background-color: #fff;
+.news_section_content .news_title:before {
+  content: "";
+  display: block;
   width: 100px;
   margin: 0 auto;
+  border: 1px solid #fff;
 }
 .news_section_content .news_title h2 {
   font-size: 44px;
@@ -228,6 +227,12 @@
   border: 1px solid #fff;
   background-color: transparent;
 }
+.article .slick-next {
+  right: -85px;
+}
+.article .slick-prev {
+  left: -100px;
+}
 .article i {
   font-size: 14px;
   color: #fff;
@@ -248,7 +253,7 @@
   align-items: center;
   justify-content: center;
   background-color: #fff;
-  margin-right: 30px;
+  margin: 0 20px 0 15px;
 }
 .article_details img {
   width: 100%;
