--- a/Project_2/assets/styles/_section.css
+++ b/Project_2/assets/styles/_section.css
@@ -164,6 +164,7 @@
   background-size: cover;
   margin: 0 auto;
   width: 100%;
+  padding-bottom: 143px;
 }
 
 .news_section_content {
@@ -195,7 +196,7 @@
   text-transform: uppercase;
 }
 
-.article .slick-dots li button:before {
+.article .slick-dots li button::before {
   content: "";
   color: transparent;
   border: 1px solid #fff;
@@ -207,7 +208,11 @@
   box-sizing: border-box;
   opacity: 1;
 }
-.article .slick-dots li.slick-active button:before {
+.article .slick-dots li.slick-active button::before {
+  background-color: #fff;
+  opacity: 1;
+}
+.article .slick-dots li button:hover::before {
   background-color: #fff;
   opacity: 1;
 }
@@ -232,6 +237,16 @@
 }
 .article .slick-prev {
   left: -100px;
+}
+.article button.slick-arrow:hover {
+  background: #fff;
+  border-color: #fff;
+  zoom: 1.1;
+  box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.6);
+}
+.article button.slick-arrow:hover i {
+  color: #0077FF;
+  transform: scale(1.1);
 }
 .article i {
   font-size: 14px;
@@ -304,4 +319,51 @@
   font-weight: 400;
   font-size: 14px;
   margin: 0;
+}
+
+.gallery {
+  background-color: #fff;
+  max-width: 1170px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.gallery_main_text {
+  padding-top: 140px;
+}
+.gallery_main_text:before {
+  content: "";
+  display: block;
+  width: 100px;
+  margin: 0 auto;
+  border: 1px solid #2c4058;
+}
+.gallery_main_text h2 {
+  font-size: 44px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 30px;
+  text-transform: uppercase;
+  color: #2c4058;
+}
+
+.main_gallery {
+  padding-top: 89px;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1170px;
+}
+
+.grid_gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr 1fr;
+  gap: 9px 9px;
+  padding-bottom: 60px;
+}
+.grid_gallery .gallery_image:first-of-type {
+  grid-area: 1/1/3/3;
+}
+.grid_gallery .lg-thumb {
+  display: block !important;
 }
