--- a/Project_2/assets/styles/main.css
+++ b/Project_2/assets/styles/main.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -646,6 +647,289 @@ nav li:hover a::before {
 .grid_gallery .gallery_image:first-of-type {
   grid-area: 1/1/3/3;
 }
-.grid_gallery .lg-thumb {
-  display: block !important;
+
+.see_more_button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 140px;
+}
+.see_more_button button {
+  width: 100%;
+  max-width: 190px;
+  height: 50px;
+  font-size: 14px;
+  text-transform: uppercase;
+  border: 1px solid #2c4058;
+  background-color: #fff;
+  cursor: pointer;
+  padding: 16px 41px;
+  text-align: center;
+  transition: all 0.3s ease-in-out;
+  position: relative;
+  overflow: hidden;
+  outline: none;
+}
+.see_more_button button:hover {
+  background: #55B7FF;
+  border-color: #55B7FF;
+  color: #2c4058;
+  box-shadow: 0px 0px 15px rgba(85, 183, 255, 0.6);
+}
+.see_more_button button:active {
+  transform: scale(0.95);
+  background: #d00000;
+  border-color: #d00000;
+  box-shadow: 0px 0px 15px rgba(208, 0, 0, 0.6);
+}
+.see_more_button button::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: radial-gradient(circle, rgba(255, 255, 255, 0.3) 10%, transparent 80%);
+  transition: all 0.5s ease-in-out;
+  transform: translate(-50%, -50%) scale(0);
+}
+.see_more_button button:hover::before {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+#map {
+  min-height: 700px;
+  z-index: 1;
+}
+
+.form {
+  height: 450px;
+  position: absolute;
+  z-index: 2;
+  left: 50%;
+  transform: translate(-50%, -70%);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #fff;
+  padding: 60px 55px 54px 55px;
+  width: 100%;
+  max-width: 770px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
+}
+.form .contact_header:before {
+  content: "";
+  display: block;
+  width: 100px;
+  margin: 0 auto;
+  border: 1px solid #2c4058;
+}
+.form h2 {
+  text-transform: uppercase;
+  color: #2c4058;
+  font-weight: bold;
+  font-size: 44px;
+  padding-top: 30px;
+  margin-bottom: 42px;
+}
+.form .contact_details {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  gap: 55px;
+}
+.form .contact_details .contact_details_info {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  min-width: 286px;
+  color: #2c4058;
+}
+.form .contact_details .contact_details_info .contact_details_info_details {
+  font-size: 15px;
+}
+.form .contact_details .contact_details_info .contact_details_info_details p {
+  display: inline-block;
+}
+.form .contact_details .contact_details_info .contact_details_info_details i {
+  margin-right: 10px;
+  color: #7E5AFF;
+  transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+.form .contact_details .contact_details_info .contact_details_info_details i:hover {
+  color: #d00000;
+  transform: scale(1.2);
+}
+
+#name::placeholder {
+  color: #000;
+}
+
+#name {
+  border-bottom: 1px solid #000;
+}
+
+.contact_information {
+  display: flex;
+  flex-direction: column;
+}
+.contact_information input {
+  width: 100%;
+  font-size: 18px;
+  margin-bottom: 30px;
+  padding: 0 0 15px;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.contact_information .submit_info {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.contact_information .submit_info button {
+  width: 100%;
+  max-width: 140px;
+  height: 50px;
+  font-size: 14px;
+  text-transform: uppercase;
+  border: 1px solid #2c4058;
+  background-color: #fff;
+  cursor: pointer;
+  padding: 16px 41px;
+  text-align: center;
+  transition: all 0.3s ease-in-out;
+  position: relative;
+  overflow: hidden;
+  outline: none;
+}
+.contact_information .submit_info button:hover {
+  background: #55B7FF;
+  border-color: #55B7FF;
+  color: #2c4058;
+  box-shadow: 0px 0px 15px rgba(85, 183, 255, 0.6);
+}
+.contact_information .submit_info button:active {
+  transform: scale(0.95);
+  background: #d00000;
+  border-color: #d00000;
+  box-shadow: 0px 0px 15px rgba(208, 0, 0, 0.6);
+}
+.contact_information .submit_info button::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: radial-gradient(circle, rgba(255, 255, 255, 0.3) 10%, transparent 80%);
+  transition: all 0.5s ease-in-out;
+  transform: translate(-50%, -50%) scale(0);
+}
+.contact_information .submit_info button:hover::before {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+footer {
+  background-image: url("../images/footer_background.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
+
+.footer_container {
+  padding: 230px 160px 0 190px;
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+  display: flex;
+  gap: 370px;
+  justify-content: space-evenly;
+}
+
+.credit_container {
+  display: flex;
+  flex-direction: column;
+  gap: 41px;
+  align-items: center;
+}
+.credit_container img {
+  transition: transform 0.3s ease-in-out;
+}
+.credit_container:hover img {
+  transform: scale(1.1);
+}
+.credit_container p {
+  font-size: 14px;
+  color: #fff;
+  font-weight: 400;
+  transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+.credit_container p:hover {
+  color: #d00000;
+  transform: scale(1.1);
+}
+
+.social_icons_footer {
+  max-width: 160px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  align-items: flex-start;
+}
+.social_icons_footer a {
+  display: flex;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
+  overflow: hidden;
+  background: transparent;
+  box-shadow: 0px 0px 10px transparent;
+}
+.social_icons_footer a:hover {
+  background: #fff;
+  border-color: #fff;
+  transform: scale(1.15);
+  box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.6);
+  animation: bounce 0.4s ease-in-out;
+}
+.social_icons_footer a:hover i {
+  color: #0077FF;
+  transform: scale(1.3);
+}
+.social_icons_footer i {
+  width: 16px;
+  height: 18px;
+  font-size: 16px;
+  font-weight: 400;
+  position: absolute;
+  text-align: center;
+  top: 33%;
+  left: 30%;
+  transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.social_icons_footer a:nth-child(1):hover i {
+  color: #1877F2;
+  position: absolute;
+  top: 32%;
+  left: 28%;
+}
+
+.social_icons_footers a:nth-child(2):hover i {
+  color: #1DA1F2;
+}
+
+.social_icons_footer a:nth-child(3):hover i {
+  color: #E4405F;
 }
