--- a/Project_2/assets/styles/_footer.scss
+++ b/Project_2/assets/styles/_footer.scss
@@ -1,1 +1,113 @@
 @import '../styles/vars';
+
+footer {
+    background-image: url('../images/footer_background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+
+}
+
+.footer_container {
+    padding: 230px 160px 0 190px;
+    width: 100%;
+    max-width: 1170px;
+    margin: 0 auto;
+    display: flex;
+    gap: 370px;
+    justify-content: space-evenly;
+}
+
+.credit_container {
+    display: flex;
+    flex-direction: column;
+    gap: 41px;
+    align-items: center;
+
+    img {
+        transition: transform 0.3s ease-in-out;
+    }
+
+    &:hover img {
+        transform: scale(1.1);
+    }
+
+    p {
+        font-size: $font_size_1;
+        color: $primary-color;
+        font-weight: 400;
+        transition: color 0.3s ease-in-out,
+            transform 0.3s ease-in-out;
+
+        &:hover {
+            color: $hover_color;
+            transform: scale(1.1);
+        }
+    }
+}
+
+.social_icons_footer {
+    max-width: 160px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    align-items: flex-start;
+
+    a {
+        display: flex;
+        border: 1px solid $primary-color;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        position: relative;
+        justify-content: center;
+        align-items: center;
+        transition: all 0.3s ease-in-out;
+        overflow: hidden;
+        background: transparent;
+        box-shadow: 0px 0px 10px transparent;
+
+        &:hover {
+            background: $primary-color;
+            border-color: $primary-color;
+            transform: scale(1.15);
+            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.6);
+            animation: bounce 0.4s ease-in-out;
+
+            i {
+                color: #0077FF;
+                transform: scale(1.3);
+            }
+        }
+    }
+
+    i {
+        width: 16px;
+        height: 18px;
+        font-size: 16px;
+        font-weight: 400;
+        position: absolute;
+        text-align: center;
+        top: 33%;
+        left: 30%;
+        transition: transform 0.3s ease-in-out,
+            color 0.3s ease-in-out;
+    }
+}
+
+.social_icons_footer a:nth-child(1):hover i {
+    color: #1877F2;
+    position: absolute;
+    top: 32%;
+    left: 28%;
+}
+
+.social_icons_footers a:nth-child(2):hover i {
+    color: #1DA1F2;
+}
+
+.social_icons_footer a:nth-child(3):hover i {
+    color: #E4405F;
+}
