--- a/Project_2/assets/styles/_header.css
+++ b/Project_2/assets/styles/_header.css
@@ -33,6 +33,15 @@ header {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   padding-top: 0;
 }
+@media screen and (max-width: 1220px) {
+  .title_bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+  }
+}
 
 .header_logo {
   max-width: 241px;
@@ -44,6 +53,12 @@ header {
 }
 .header_logo:hover img {
   transform: scale(1.1);
+}
+@media screen and (max-width: 1220px) {
+  .header_logo {
+    margin-right: 0;
+    padding-top: 5px;
+  }
 }
 
 .header_body {
@@ -99,6 +114,11 @@ header {
 .header_body .slick-dots button:hover,
 .header_body .slick-dots .slick-active button {
   background-color: #fff;
+}
+@media screen and (max-width: 1220px) {
+  .header_body {
+    margin-top: 270px;
+  }
 }
 
 .pointer_down {
