--- a/Project_2/assets/styles/_header.scss
+++ b/Project_2/assets/styles/_header.scss
@@ -6,14 +6,11 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    // margin: 0 auto;
-    // padding: 53px 215px 0;
     margin-bottom: 100px;
 }
 
 .header_container {
     width: 100%;
-    // max-width: 1170px;
     min-height: 54px;
     display: flex;
     justify-content: space-between;
@@ -38,6 +35,14 @@ header {
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
         padding-top: 0;
     }
+
+    @media screen and(max-width:1220px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+    }
 }
 
 .header_logo {
@@ -51,6 +56,11 @@ header {
 
     &:hover img {
         transform: scale(1.1);
+    }
+
+    @media screen and(max-width:1220px) {
+        margin-right: 0;
+        padding-top: 5px;
     }
 }
 
@@ -79,6 +89,7 @@ header {
             min-height: 22px;
             margin-bottom: 240px;
         }
+
     }
 
     .slick-dots {
@@ -114,6 +125,10 @@ header {
     .slick-dots button:hover,
     .slick-dots .slick-active button {
         background-color: $primary-color;
+    }
+
+    @media screen and(max-width:1220px) {
+        margin-top: 270px;
     }
 
 }
