--- a/Project_2/assets/styles/main.css
+++ b/Project_2/assets/styles/main.css
@@ -60,6 +60,15 @@ header {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   padding-top: 0;
 }
+@media screen and (max-width: 1220px) {
+  .title_bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+  }
+}
 
 .header_logo {
   max-width: 241px;
@@ -71,6 +80,12 @@ header {
 }
 .header_logo:hover img {
   transform: scale(1.1);
+}
+@media screen and (max-width: 1220px) {
+  .header_logo {
+    margin-right: 0;
+    padding-top: 5px;
+  }
 }
 
 .header_body {
@@ -126,6 +141,11 @@ header {
 .header_body .slick-dots button:hover,
 .header_body .slick-dots .slick-active button {
   background-color: #fff;
+}
+@media screen and (max-width: 1220px) {
+  .header_body {
+    margin-top: 270px;
+  }
 }
 
 .pointer_down {
@@ -207,6 +227,11 @@ nav li:hover a::before {
   background-color: #fff;
   border-color: #fff;
 }
+@media screen and (max-width: 1220px) {
+  nav li {
+    font-size: 18px;
+  }
+}
 
 .header_icons {
   margin-left: 115px;
@@ -254,6 +279,12 @@ nav li:hover a::before {
   left: 30%;
   transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
 }
+@media screen and (max-width: 1220px) {
+  .header_icons {
+    margin-left: 35px;
+    margin-bottom: 10px;
+  }
+}
 
 .header_icons a:nth-child(1):hover i {
   color: #1877F2;
@@ -283,7 +314,7 @@ nav li:hover a::before {
 }
 .what_we_do {
   background-color: #fff;
-  width: 90%;
+  width: 100%;
   max-width: 1170px;
   margin: 0 auto;
 }
