--- a/Project_2/assets/styles/_base.scss
+++ b/Project_2/assets/styles/_base.scss
@@ -15,8 +15,9 @@ body {
 
 .container {
     margin: 0 auto;
-    width: 100%;
-    height: 100vh;
+    width: 90%;
+    max-width: 1170px;
+
 }
 
 a {
