--- a/Project_2/assets/styles/_section.css
+++ b/Project_2/assets/styles/_section.css
@@ -1,8 +1,5 @@
 .what_we_do {
   background-color: #fff;
-  width: 100%;
-  max-width: 1170px;
-  margin: 0 auto;
 }
 @media screen and (max-width: 900px) {
   .what_we_do {
@@ -22,7 +19,7 @@
   margin: 0 auto;
   border: 1px solid #2c4058;
 }
-.what_we_do_title h2 {
+.what_we_do_title * {
   font-size: 44px;
   font-weight: bold;
   text-align: center;
@@ -318,18 +315,21 @@
   background-color: #fff;
   margin: 0 20px 0 15px;
 }
+.article_details .article-content {
+  padding: 30px 20px;
+}
 .article_details img {
   width: 100%;
   height: 240px;
 }
 .article_details h2 {
-  margin: 30px 20px 15px;
+  margin-bottom: 20px;
   color: #2c4058;
   font-weight: bold;
   font-size: 22px;
 }
 .article_details p {
-  margin: 0 20px 39px;
+  margin-bottom: 39px;
   color: #2c4058;
   font-size: 18px;
   font-weight: 400;
@@ -527,10 +527,6 @@
 .form .contact_details .contact_details_info .contact_details_info_details i:hover {
   color: #d00000;
   transform: scale(1.2);
-}
-
-#name::placeholder {
-  color: #000;
 }
 
 #name {
