--- a/Project_2/assets/styles/_section.scss
+++ b/Project_2/assets/styles/_section.scss
@@ -2,9 +2,6 @@
 
 .what_we_do {
     background-color: $primary-color;
-    width: 100%;
-    max-width: 1170px;
-    margin: 0 auto;
 
     @media screen and(max-width:900px) {
         width: 100%;
@@ -24,7 +21,7 @@
         border: 1px solid $secondary-color;
     }
 
-    h2 {
+    * {
         font-size: $font_size_5;
         font-weight: bold;
         text-align: center;
@@ -345,7 +342,6 @@
 .article_details {
     width: 100%;
     max-width: 370px;
-    // height: 514px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -353,20 +349,24 @@
     background-color: $primary-color;
     margin: 0 20px 0 15px;
 
+    .article-content {
+        padding: 30px 20px
+    }
+
     img {
         width: 100%;
         height: 240px;
     }
 
     h2 {
-        margin: 30px 20px 15px;
+        margin-bottom: 20px;
         color: $secondary-color;
         font-weight: bold;
         font-size: $font_size_4;
     }
 
     p {
-        margin: 0 20px 39px;
+        margin-bottom: 39px;
         color: $secondary-color;
         font-size: $font_size_3;
         font-weight: 400;
@@ -595,9 +595,6 @@
     }
 }
 
-#name::placeholder {
-    color: #000;
-}
 
 #name {
     border-bottom: 1px solid #000;
