--- a/Project_2/assets/styles/main.css
+++ b/Project_2/assets/styles/main.css
@@ -12,8 +12,8 @@ body {
 
 .container {
   margin: 0 auto;
-  width: 100%;
-  height: 100vh;
+  width: 90%;
+  max-width: 1170px;
 }
 
 a {
@@ -32,27 +32,30 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   margin-bottom: 100px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .header_container {
   width: 100%;
-  min-height: 54px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
 }
 
 .title_bar {
   width: 100%;
   margin: 0 auto;
   display: flex;
-  position: fixed;
   justify-content: center;
   align-items: center;
   padding-top: 53px;
-  top: 0;
-  left: 0;
-  z-index: 1000;
   transition: all 0.3s ease-in-out;
 }
 .title_bar.scrolled {
@@ -114,13 +117,11 @@ header {
   font-weight: bold;
   font-size: 80px;
   margin-bottom: 20px;
-  min-height: 98px;
 }
 .header_body .slider_heading h3 {
   font-weight: 400;
   letter-spacing: 30%;
   font-size: 18px;
-  min-height: 22px;
   margin-bottom: 240px;
 }
 @media screen and (max-width: 900px) {
@@ -182,9 +183,6 @@ header {
 
 .pointer_down {
   margin-bottom: 50px;
-  position: relative;
-  top: -40px;
-  left: 0px;
 }
 .pointer_down a {
   text-decoration: none;
@@ -224,7 +222,6 @@ header {
 nav {
   font-family: "Source Sans 3", serif;
   max-width: 515px;
-  height: 18px;
   width: 100%;
 }
 nav .header_menu {
@@ -432,9 +429,6 @@ nav li:hover a::before {
 }
 .what_we_do {
   background-color: #fff;
-  width: 100%;
-  max-width: 1170px;
-  margin: 0 auto;
 }
 @media screen and (max-width: 900px) {
   .what_we_do {
@@ -454,7 +448,7 @@ nav li:hover a::before {
   margin: 0 auto;
   border: 1px solid #2c4058;
 }
-.what_we_do_title h2 {
+.what_we_do_title * {
   font-size: 44px;
   font-weight: bold;
   text-align: center;
@@ -750,18 +744,21 @@ nav li:hover a::before {
   background-color: #fff;
   margin: 0 20px 0 15px;
 }
+.article_details .article-content {
+  padding: 30px 20px;
+}
 .article_details img {
   width: 100%;
   height: 240px;
 }
 .article_details h2 {
-  margin: 30px 20px 15px;
+  margin-bottom: 20px;
   color: #2c4058;
   font-weight: bold;
   font-size: 22px;
 }
 .article_details p {
-  margin: 0 20px 39px;
+  margin-bottom: 39px;
   color: #2c4058;
   font-size: 18px;
   font-weight: 400;
@@ -961,10 +958,6 @@ nav li:hover a::before {
   transform: scale(1.2);
 }
 
-#name::placeholder {
-  color: #000;
-}
-
 #name {
   border-bottom: 1px solid #000;
 }
@@ -1041,9 +1034,6 @@ footer {
 
 .footer_container {
   padding: 230px 160px 0 190px;
-  width: 100%;
-  max-width: 1170px;
-  margin: 0 auto;
   display: flex;
   gap: 370px;
   justify-content: space-evenly;
